feat(memory): 长期记忆语义检索 + FACT 免时间衰减
关键词与向量 RRF 融合，复用 EmbeddingClient/HnswIndex；embedding 失败回退关键词。

Co-authored-by: Cursor <cursoragent@cursor.com>